Update project plugins and some dependencies